--- a/exercise7/7f.htm
+++ b/exercise7/7f.htm
@@ -8,6 +8,11 @@
 </head>
 <body>
     <p>Email</p>
-    <input type="text" 
+
+    <input class="text" type="text">
+
+    <p>by clicking agree & join, you agree to the privacy policy</p>
+    
+    <button class="button">Agree & Join</button>
 </body>
 </html>
