--- a/exercise7/7f.htm
+++ b/exercise7/7f.htm
@@ -11,7 +11,7 @@
 
     <input class="text" type="text">
 
-    <p>by clicking agree & join, you agree to the privacy policy</p>
+    <p>by clicking agree & join, you agree to the privacy policy.</p>
     
     <button class="button">Agree & Join</button>
 </body>
